--- a/package.json
+++ b/package.json
@@ -10,11 +10,13 @@
   "dependencies": {
     "cors": "^2.8.5",
     "express": "^4.17.1",
-    "uuidv4": "^6.0.7"
+    "uuidv4": "^6.2.3"
   },
   "devDependencies": {
     "jest": "^25.2.6",
-    "nodemon": "^2.0.2",
+    "nodemon": "^2.0.4",
     "supertest": "^4.0.2"
-  }
+  },
+  "repository": "https://github.com/guigerminari/gostack-desafio-backend.git",
+  "author": "Guilherme Germinari <gags.guilherme@gmail.com>"
 }
